# Enhanced Unit Test CMakeLists.txt
cmake_minimum_required(VERSION 3.12)

add_subdirectory(aot)
add_subdirectory(aot-arch)
add_subdirectory(fast-interp)
add_subdirectory(interpreter-core)
add_subdirectory(interpreter-invoke)
add_subdirectory(interpreter-runtime)
add_subdirectory(ssp)
add_subdirectory(posix)
add_subdirectory(runtime-common-reftypes-multimod)
add_subdirectory(runtime-common-wasi-mem64)
add_subdirectory(shared-utils)
add_subdirectory(thread-mgr)
add_subdirectory(wasm-c-api)
add_subdirectory(wasm-vm)
add_subdirectory(wasi-coverage)
add_subdirectory(compilation-emit)
if (NOT WAMR_BUILD_TARGET STREQUAL "X86_32")
  add_subdirectory(compilation-jit)
  add_subdirectory(constants)
  add_subdirectory(control-flow)
  add_subdirectory(extension)
  add_subdirectory(memory)
  add_subdirectory(numeric)
  add_subdirectory(reference)
  add_subdirectory(running-modes)
  add_subdirectory(simd)
  add_subdirectory(table)
  add_subdirectory(variable)
endif ()
